net-dia.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-diagnostics
  namespace: ollama
spec:
  containers:
  - name: diagnostics
    image: nicolaka/netshoot
    command:
    - sleep
    - inf
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
  restartPolicy: Never
