openwebui_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
      
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      serviceAccountName: open-webui-sa
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:0.6.36
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "1.5Gi"
        volumeMounts:
        - name: openwebui-data
          mountPath: /app/backend/data
      volumes:
        - name: openwebui-data
          persistentVolumeClaim:
            claimName: openwebui-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: ollama
  labels:
    app: open-webui
spec:
  type: NodePort
  selector:
    app: open-webui
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080
