network_policy_ollama.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ollama-network-policy
  namespace: ollama
spec:
  podSelector:
    matchLabels:
      app: ollama
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ollama
      podSelector:
        matchLabels:
          app: open-webui
    ports:
    - protocol: TCP
      port: 11434
  #Prometheus incoming traffic
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring  
    - podSelector:
        matchLabels:
          app: prometheus  
    ports:
    - protocol: TCP
      port: 9100
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9100
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ollama
      podSelector:
        matchLabels:
          app: ollama
    ports:
    - protocol: TCP
      port: 11434
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app: kube-dns
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
